# CV6-s-PlaygroundBot

./: .env  BOT_TOKEN.py  LICENSE  NOTES  keep_alive.py  main.py  pyproject.toml
cogs/: cog1test.py
