[tool.poetry]
name = "CV6sPlaygroundBot"
version = "0.1.0"
description = "This bot is CaptainVietnam6 (Kiet)'s flagship discord bot and is intended for the CV6's Playground Server"
authors = ["Kiet Pham <kiet.riley2005@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
"discord.py" = "^1.6.0"
PyNaCl = "^1.4.0"
youtube_dl = "^2021.3.2"
Flask = "^1.1.2"
PyDictionary = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
